--- a/pictures.html
+++ b/pictures.html
@@ -34,7 +34,7 @@
         
    </div>
         <div class="collage">
-        <img src="../Website/img/collage.jpg" width="1000"
+        <img src="../Website/img/collage.JPG" width="1000"
          height="500" >
     </div>
         
