--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="title">
         <h1>ENM VISION SCHOOL</h1>
         <br><br>
-        <img src="img/8.JPEG" width="600"
+        <img src="img/8.jpeg" width="600"
          height="400"></div>
         
     </header>
