--- a/donate.html
+++ b/donate.html
@@ -60,7 +60,7 @@
 <h4> &nbsp DONATION <br> &nbsp Google Pay: 09654694411</h4>
  <br><br>
              
-<h15>&nbsp<u>In case you are sending anything via Ecommerce websites or Postal Courier:
+<h15>&nbsp<u>In case you are sending anything via Ecommerce websites or Postal Courier:&nbsp
     </u> 
 </h15> <br><br>
 <h16>&nbsp <u>Address of delivery:</u>
