--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          <a href="structure.html">STRUCTURE</a>    
             </li>
              <li>
-         <a href="pictures.html">PICTURES</a>    
+         <a href="pictures.html">GALLERY</a>    
         </li>
         <li>
          <a href="donate.html">DONATE</a>    
