--- a/pictures.html
+++ b/pictures.html
@@ -20,7 +20,7 @@
          <a href="structure.html">STRUCTURE</a>    
             </li>
              <li>
-         <a href="pictures.html">PICTURES</a>    
+         <a href="pictures.html">GALLERY</a>    
         </li>
         <li>
          <a href="donate.html">DONATE</a>    
