--- a/donate.html
+++ b/donate.html
@@ -40,20 +40,29 @@
 
 <h5>&nbsp <u><b>PRESENT REQUIREMENTS:</b></u></h5>
 <h1><br></h1>
+https://www.amazon.in/dp/0194799484/ref=cm_sw_r_wa_apa_i_PMouFbBHZM90X
+<h7>&nbsp We need some items urgently for the school :-
 
-<h7>&nbsp R S Aggarwal Mathematics Books : 2020 Edition - Classes 6-10: one book for Each class 
 </h7> <br>
-<h8>&nbsp NCERT  Books Science and Maths Classes 6-10: one copy each 
+<h8>&nbsp 1. Wi-Fi booster / router (for zoom classes)  
 </h8> <br>
-<h9>&nbsp Registers: 100 PC. ( A-4 size 400 pages )
+<h9>&nbsp 2. Some stationary- books and notebooks
 </h9> <br>
-<h10>&nbsp Notebooks ( 5 subjects in one) 25 pieces 
+             <h10>&nbsp <b>BOOK REQUIREMENTS </b>
 </h10> <br>
-<h11>&nbsp Pens: Blue 100</h11> <br>
-<h12>&nbsp Reynolds pen blue: 100</h12> <br>
-<h13>&nbsp Pencils: 200</h13>  <br>
-<h14>&nbsp A-4 size printing paper 5 packs.
-</h14> <br><br>
+<h11>&nbsp Geography of India :: <a> https://www.amazon.in/dp/9390185718/ref=cm_sw_r_wa_apa_i_DEouFbF8YSBVD </a> </h11> <br>
+<h12>&nbsp Oxford School Atlas: India's Most Trusted Atlas 35th edition :: <a>https://www.amazon.in/dp/019946071X/ref=cm_sw_r_wa_apa_i_mJouFbGKWPPV7</a></h12> <br>
+             <h13>&nbsp Indian Polity 5th Edition :: <a>https://www.amazon.in/dp/935260363X/ref=cm_sw_r_wa_apa_i_KLouFbKE75DDE</a></h13>  <br>
+             <h14>&nbsp Oxford Advance Learners Dictionary with DVD - ROM :: <a>https://www.amazon.in/dp/0194799484/ref=cm_sw_r_wa_apa_i_PMouFbBHZM90X</a>
+</h14> <br>
+             <h20>&nbsp Cambridge Advanced Learners Dictionary (CD-ROM)  :: <a>https://www.amazon.in/dp/1107504449/ref=cm_sw_r_wa_apa_i_ENouFb9PDXRQY</a>
+</h20> <br>
+             <h21>&nbsp Merriam-Webster's Vocabulary Builder   :: <a>https://www.amazon.in/dp/B003IS768K/ref=cm_sw_r_wa_apa_5NouFbTAD1X5Q</a>
+</h21> <br>
+             <h22>&nbsp English-English-Hindi Dictionary    :: <a>https://www.amazon.in/dp/0198076401/ref=cm_sw_r_wa_apa_i_JPouFbCARFWFM</a>
+</h22> <br>
+              <h23>&nbsp Reynolds 045 Ball Pen | Set of 40 | 10 Blue, 10 Black, 10 Red & 10 Green     :: <a>https://www.amazon.in/dp/B07Q2Z5B1R/ref=cm_sw_r_wa_apa_i_WQouFb361AEYQ</a>
+</h23> <br><br>
              
 <h4> &nbsp DONATION <br> &nbsp Google Pay: 09654694411</h4>
  <br><br>
