--- a/donate.html
+++ b/donate.html
@@ -40,8 +40,8 @@
 
 <h5>&nbsp <u><b>PRESENT REQUIREMENTS:</b></u></h5>
 <h1><br></h1>
-https://www.amazon.in/dp/0194799484/ref=cm_sw_r_wa_apa_i_PMouFbBHZM90X
-<h7>&nbsp We need some items urgently for the school :-
+<br>
+             <h7>&nbsp We need some items urgently for the school :-
 
 </h7> <br>
 <h8>&nbsp 1. Wi-Fi booster / router (for zoom classes)  
@@ -50,7 +50,7 @@ https://www.amazon.in/dp/0194799484/ref=cm_sw_r_wa_apa_i_PMouFbBHZM90X
 </h9> <br>
              <h10>&nbsp <b>BOOK REQUIREMENTS </b>
 </h10> <br>
-<h11>&nbsp Geography of India :: <a> https://www.amazon.in/dp/9390185718/ref=cm_sw_r_wa_apa_i_DEouFbF8YSBVD </a> </h11> <br>
+<h11>&nbsp <a href = "https://www.amazon.in/dp/9390185718/ref=cm_sw_r_wa_apa_i_DEouFbF8YSBVD"> Geography of India </a> </h11> <br>
 <h12>&nbsp Oxford School Atlas: India's Most Trusted Atlas 35th edition :: <a>https://www.amazon.in/dp/019946071X/ref=cm_sw_r_wa_apa_i_mJouFbGKWPPV7</a></h12> <br>
              <h13>&nbsp Indian Polity 5th Edition :: <a>https://www.amazon.in/dp/935260363X/ref=cm_sw_r_wa_apa_i_KLouFbKE75DDE</a></h13>  <br>
              <h14>&nbsp Oxford Advance Learners Dictionary with DVD - ROM :: <a>https://www.amazon.in/dp/0194799484/ref=cm_sw_r_wa_apa_i_PMouFbBHZM90X</a>
