--- a/donate.html
+++ b/donate.html
@@ -48,20 +48,19 @@
 </h8> <br>
 <h9>&nbsp 2. Some stationary- books and notebooks
 </h9> <br>
-             <h10>&nbsp <b>BOOK REQUIREMENTS </b>
-</h10> <br>
+            
 <h11>&nbsp <a href = "https://www.amazon.in/dp/9390185718/ref=cm_sw_r_wa_apa_i_DEouFbF8YSBVD"> Geography of India </a> </h11> <br>
-<h12>&nbsp Oxford School Atlas: India's Most Trusted Atlas 35th edition :: <a>https://www.amazon.in/dp/019946071X/ref=cm_sw_r_wa_apa_i_mJouFbGKWPPV7</a></h12> <br>
-             <h13>&nbsp Indian Polity 5th Edition :: <a>https://www.amazon.in/dp/935260363X/ref=cm_sw_r_wa_apa_i_KLouFbKE75DDE</a></h13>  <br>
-             <h14>&nbsp Oxford Advance Learners Dictionary with DVD - ROM :: <a>https://www.amazon.in/dp/0194799484/ref=cm_sw_r_wa_apa_i_PMouFbBHZM90X</a>
+<h12>&nbsp <a href="https://www.amazon.in/dp/019946071X/ref=cm_sw_r_wa_apa_i_mJouFbGKWPPV7">Oxford School Atlas: India's Most Trusted Atlas 35th edition</a></h12> <br>
+             <h13>&nbsp <a href="https://www.amazon.in/dp/935260363X/ref=cm_sw_r_wa_apa_i_KLouFbKE75DDE">Indian Polity 5th Edition</a></h13>  <br>
+             <h14>&nbsp <a href="https://www.amazon.in/dp/0194799484/ref=cm_sw_r_wa_apa_i_PMouFbBHZM90X">Oxford Advance Learners Dictionary with DVD - ROM</a>
 </h14> <br>
-             <h20>&nbsp Cambridge Advanced Learners Dictionary (CD-ROM)  :: <a>https://www.amazon.in/dp/1107504449/ref=cm_sw_r_wa_apa_i_ENouFb9PDXRQY</a>
+             <h20>&nbsp <a href="https://www.amazon.in/dp/1107504449/ref=cm_sw_r_wa_apa_i_ENouFb9PDXRQY">Cambridge Advanced Learners Dictionary (CD-ROM)</a>
 </h20> <br>
-             <h21>&nbsp Merriam-Webster's Vocabulary Builder   :: <a>https://www.amazon.in/dp/B003IS768K/ref=cm_sw_r_wa_apa_5NouFbTAD1X5Q</a>
+             <h21>&nbsp <a href="https://www.amazon.in/dp/B003IS768K/ref=cm_sw_r_wa_apa_5NouFbTAD1X5Q">Merriam-Webster's Vocabulary Builder</a>
 </h21> <br>
-             <h22>&nbsp English-English-Hindi Dictionary    :: <a>https://www.amazon.in/dp/0198076401/ref=cm_sw_r_wa_apa_i_JPouFbCARFWFM</a>
+             <h22>&nbsp <a href="https://www.amazon.in/dp/0198076401/ref=cm_sw_r_wa_apa_i_JPouFbCARFWFM">English-English-Hindi Dictionary</a>
 </h22> <br>
-              <h23>&nbsp Reynolds 045 Ball Pen | Set of 40 | 10 Blue, 10 Black, 10 Red & 10 Green     :: <a>https://www.amazon.in/dp/B07Q2Z5B1R/ref=cm_sw_r_wa_apa_i_WQouFb361AEYQ</a>
+              <h23>&nbsp <a href="https://www.amazon.in/dp/B07Q2Z5B1R/ref=cm_sw_r_wa_apa_i_WQouFb361AEYQ">Reynolds 045 Ball Pen | Set of 40 | 10 Blue, 10 Black, 10 Red & 10 Green</a>
 </h23> <br><br>
              
 <h4> &nbsp DONATION <br> &nbsp Google Pay: 09654694411</h4>
