--- a/donate.html
+++ b/donate.html
@@ -44,7 +44,7 @@
              <h7>&nbsp We need some items urgently for the school :-
 
 </h7> <br>
-<h8>&nbsp 1. Wi-Fi booster / router (for zoom classes)  
+             <h8>&nbsp <a href="https://www.amazon.in/dp/B07GVR9TG7/ref=cm_sw_r_wa_apa_i_S1puFb465FV8C">1. Wi-Fi booster / router (for zoom classes)</a>   
 </h8> <br>
 <h9>&nbsp 2. Some stationary- books and notebooks
 </h9> <br>
@@ -61,7 +61,16 @@
              <h22>&nbsp <a href="https://www.amazon.in/dp/0198076401/ref=cm_sw_r_wa_apa_i_JPouFbCARFWFM">English-English-Hindi Dictionary</a>
 </h22> <br>
               <h23>&nbsp <a href="https://www.amazon.in/dp/B07Q2Z5B1R/ref=cm_sw_r_wa_apa_i_WQouFb361AEYQ">Reynolds 045 Ball Pen | Set of 40 | 10 Blue, 10 Black, 10 Red & 10 Green</a>
-</h23> <br><br>
+</h23> <br>
+              <h24>&nbsp <a href="https://www.amazon.in/dp/9352831330/ref=cm_sw_r_wa_apa_i_dGpuFbTJ25KCT">New Composite Mathematics Class 3 </a>
+</h24> <br>
+              <h25>&nbsp <a href="https://www.amazon.in/dp/9352831349/ref=cm_sw_r_wa_apa_i_lHpuFbF7J78FA">New Composite Mathematics Class 4 </a>
+</h25> <br>
+                <h26>&nbsp <a href="https://www.amazon.in/dp/9385676636/ref=cm_sw_r_wa_apa_i_8IpuFbT310ECB">Lakhmir Singh's Science 4 (for 2021 Exam) </a>
+</h26> <br>
+                <h27>&nbsp <a href="https://www.amazon.in/dp/9385676628/ref=cm_sw_r_wa_apa_i_YJpuFbNCY029P">Lakhmir Singh's Science 3 (for 2021 Exam)  </a>
+</h27> <br>
+           <br>
              
 <h4> &nbsp DONATION <br> &nbsp Google Pay: 09654694411</h4>
  <br><br>
