--- a/donate.html
+++ b/donate.html
@@ -40,7 +40,6 @@
 
 <h5>&nbsp <u><b>PRESENT REQUIREMENTS:</b></u></h5>
 <h1><br></h1>
-<br>
              <h7>&nbsp We need some items urgently for the school :-
 
 </h7> <br>
@@ -73,13 +72,13 @@
            <br>
              
 <h4> &nbsp DONATION <br> &nbsp Google Pay: 09654694411</h4>
- <br><br>
+ <br>
              
 <h15>&nbsp<u>In case you are sending anything via Ecommerce websites or Postal Courier:&nbsp
     </u> 
-</h15> <br><br>
+</h15> <br>
 <h16>&nbsp <u>Address of delivery:</u>
-</h16> <br><br>
+</h16> <br>
 <h17> &nbsp ASHUTOSH KUMAR 
 ,3/72 - FIRST FLOOR 
 ,NEAR DURGA TEMPLE 
@@ -87,8 +86,8 @@
 <br>&nbsp NEW DELHI 
 ,PIN-110015.
 </h17>
-        <br><br>
-<h18>&nbsp MOBILE :- 09654694411 </h18> <br><br><br>            
+        <br>
+<h18>&nbsp MOBILE :- 09654694411 </h18> <br>        
     </div>
     </header>
 </body>
