--- a/donate.html
+++ b/donate.html
@@ -74,10 +74,9 @@
 <h4> &nbsp DONATION <br> &nbsp Google Pay: 09654694411</h4>
  <br>
              
-<h15>&nbsp<u>In case you are sending anything via Ecommerce websites or Postal Courier:&nbsp
-    </u> 
+<h15>&nbsp In case you are sending anything via Ecommerce websites or Postal Courier:&nbsp
 </h15> <br>
-<h16>&nbsp <u>Address of delivery:</u>
+<h16>&nbsp Address of delivery:
 </h16> <br>
 <h17> &nbsp ASHUTOSH KUMAR 
 ,3/72 - FIRST FLOOR 
