--- a/pictures.html
+++ b/pictures.html
@@ -32,8 +32,13 @@
         
    </div>
         <div class="collage">
-        <img src="img/collage.jpg" width="1000"
-         height="500" >
+        <img src="img/1.jpg" width="100%;">
+    </div>
+        <div class="collage">
+        <img src="img/2.jpg" width="100%;">
+    </div>
+        <div class="collage">
+        <img src="img/3.jpg" width="100%;">
     </div>
         
     </header>
