--- a/pictures.html
+++ b/pictures.html
@@ -32,13 +32,13 @@
         
    </div>
         <div class="collage">
-        <img src="img/1.jpg" width="100%;">
+        <img src="img/1.jpeg" width="100%;">
     </div>
         <div class="collage">
-        <img src="img/2.jpg" width="100%;">
+        <img src="img/2.jpeg" width="100%;">
     </div>
         <div class="collage">
-        <img src="img/3.jpg" width="100%;">
+        <img src="img/3.jpeg" width="100%;">
     </div>
         
     </header>
