--- a/pictures.html
+++ b/pictures.html
@@ -41,6 +41,53 @@
         <div class="collage">
         <img src="img/3.jpeg" width="100%;">
     </div>
+            <div class="collage">
+        <img src="img/4.jpeg" width="100%;">
+    </div>
+            <div class="collage">
+        <img src="img/5.jpeg" width="100%;">
+    </div>
+            <div class="collage">
+        <img src="img/6.jpeg" width="100%;">
+    </div>
+            <div class="collage">
+        <img src="img/7.jpeg" width="100%;">
+    </div>
+            <div class="collage">
+        <img src="img/8.jpeg" width="100%;">
+    </div>
+            <div class="collage">
+        <img src="img/9.jpeg" width="100%;">
+    </div>
+            <div class="collage">
+        <img src="img/10.jpeg" width="100%;">
+    </div>
+            <div class="collage">
+        <img src="img/11.jpeg" width="100%;">
+    </div>
+            <div class="collage">
+        <img src="img/12.jpeg" width="100%;">
+    </div>
+            <div class="collage">
+        <img src="img/13.jpeg" width="100%;">
+    </div>
+            <div class="collage">
+        <img src="img/14.jpeg" width="100%;">
+    </div><div class="collage">
+        <img src="img/15.jpeg" width="100%;">
+    </div>
+            <div class="collage">
+        <img src="img/16.jpeg" width="100%;">
+    </div>
+            <div class="collage">
+        <img src="img/17.jpeg" width="100%;">
+    </div>
+            <div class="collage">
+        <img src="img/18.jpeg" width="100%;">
+    </div>
+            <div class="collage">
+        <img src="img/19.jpeg" width="100%;">
+    </div>
 
         </div>
                 
