--- a/pictures.html
+++ b/pictures.html
@@ -31,63 +31,7 @@
         </ul>
      </header>   
    </div>
-        <div class="row">
-        <div class="collage">
-        <img src="img/1.jpeg" width="100%;">
-    </div>
-        <div class="collage">
-        <img src="img/2.jpeg" width="100%;">
-    </div>
-        <div class="collage">
-        <img src="img/3.jpeg" width="100%;">
-    </div>
-            <div class="collage">
-        <img src="img/4.jpeg" width="100%;">
-    </div>
-            <div class="collage">
-        <img src="img/5.jpeg" width="100%;">
-    </div>
-            <div class="collage">
-        <img src="img/6.jpeg" width="100%;">
-    </div>
-            <div class="collage">
-        <img src="img/7.jpeg" width="100%;">
-    </div>
-            <div class="collage">
-        <img src="img/8.jpeg" width="100%;">
-    </div>
-            <div class="collage">
-        <img src="img/9.jpeg" width="100%;">
-    </div>
-            <div class="collage">
-        <img src="img/10.jpeg" width="100%;">
-    </div>
-            <div class="collage">
-        <img src="img/11.jpeg" width="100%;">
-    </div>
-            <div class="collage">
-        <img src="img/12.jpeg" width="100%;">
-    </div>
-            <div class="collage">
-        <img src="img/13.jpeg" width="100%;">
-    </div>
-            <div class="collage">
-        <img src="img/14.jpeg" width="100%;">
-    </div><div class="collage">
-        <img src="img/15.jpeg" width="100%;">
-    </div>
-            <div class="collage">
-        <img src="img/16.jpeg" width="100%;">
-    </div>
-            <div class="collage">
-        <img src="img/17.jpeg" width="100%;">
-    </div>
-            <div class="collage">
-        <img src="img/18.jpeg" width="100%;">
-    </div>
-            <div class="collage">
-        <img src="img/19.jpeg" width="100%;">
-    </div>
+        <iframe src="https://onedrive.live.com/embed?cid=BBD70983F83D820A&amp;resid=BBD70983F83D820A%213802&amp;authkey=AHY1ziioqGso7Ok&amp;em=2&amp;wdAr=1.7777777777777777" width="610px" height="367px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
 
         </div>
                 
