--- a/pictures.html
+++ b/pictures.html
@@ -30,8 +30,11 @@
         </li>
         </ul>
      </header>   
-   </div>
-        <iframe src="https://onedrive.live.com/embed?cid=BBD70983F83D820A&amp;resid=BBD70983F83D820A%213802&amp;authkey=AHY1ziioqGso7Ok&amp;em=2&amp;wdAr=1.7777777777777777" width="962px" height="565px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+   
+        <div align="center">
+        <iframe height="200" width="800" src="" width="962px" height="565px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+    </div>
+        <iframe </iframe>
         </div>
                 
     
