--- a/pictures.html
+++ b/pictures.html
@@ -34,7 +34,7 @@
         <br>
         <div>
         
-        <iframe src="https://onedrive.live.com/embed?cid=BBD70983F83D820A&amp;resid=BBD70983F83D820A%213802&amp;authkey=AHY1ziioqGso7Ok&amp;em=2&amp;wdAr=1.7777777777777777"  frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+        <iframe src="https://onedrive.live.com/embed?cid=BBD70983F83D820A&amp;resid=BBD70983F83D820A%213802&amp;authkey=AHY1ziioqGso7Ok&amp;em=2&amp;wdAr=1.7777777777777777" width=100% height=100% frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
 
         </div>
         
