--- a/donate.html
+++ b/donate.html
@@ -45,30 +45,11 @@
 </h7> <br>
              <h8>&nbsp <a href="https://www.amazon.in/dp/B07GVR9TG7/ref=cm_sw_r_wa_apa_i_S1puFb465FV8C">1. Wi-Fi booster / router (for zoom classes)</a>   
 </h8> <br>
-<h9>&nbsp 2. Some stationary- books and notebooks
+<h9>&nbsp 2. Notebooks
 </h9> <br>
             
-<h11>&nbsp <a href = "https://www.amazon.in/dp/9390185718/ref=cm_sw_r_wa_apa_i_DEouFbF8YSBVD"> Geography of India </a> </h11> <br>
-<h12>&nbsp <a href="https://www.amazon.in/dp/019946071X/ref=cm_sw_r_wa_apa_i_mJouFbGKWPPV7">Oxford School Atlas: India's Most Trusted Atlas 35th edition</a></h12> <br>
-             <h13>&nbsp <a href="https://www.amazon.in/dp/935260363X/ref=cm_sw_r_wa_apa_i_KLouFbKE75DDE">Indian Polity 5th Edition</a></h13>  <br>
-             <h14>&nbsp <a href="https://www.amazon.in/dp/0194799484/ref=cm_sw_r_wa_apa_i_PMouFbBHZM90X">Oxford Advance Learners Dictionary with DVD - ROM</a>
-</h14> <br>
-             <h20>&nbsp <a href="https://www.amazon.in/dp/1107504449/ref=cm_sw_r_wa_apa_i_ENouFb9PDXRQY">Cambridge Advanced Learners Dictionary (CD-ROM)</a>
-</h20> <br>
-             <h21>&nbsp <a href="https://www.amazon.in/dp/B003IS768K/ref=cm_sw_r_wa_apa_5NouFbTAD1X5Q">Merriam-Webster's Vocabulary Builder</a>
-</h21> <br>
-             <h22>&nbsp <a href="https://www.amazon.in/dp/0198076401/ref=cm_sw_r_wa_apa_i_JPouFbCARFWFM">English-English-Hindi Dictionary</a>
-</h22> <br>
               <h23>&nbsp <a href="https://www.amazon.in/dp/B07Q2Z5B1R/ref=cm_sw_r_wa_apa_i_WQouFb361AEYQ">Reynolds 045 Ball Pen | Set of 40 | 10 Blue, 10 Black, 10 Red & 10 Green</a>
 </h23> <br>
-              <h24>&nbsp <a href="https://www.amazon.in/dp/9352831330/ref=cm_sw_r_wa_apa_i_dGpuFbTJ25KCT">New Composite Mathematics Class 3 </a>
-</h24> <br>
-              <h25>&nbsp <a href="https://www.amazon.in/dp/9352831349/ref=cm_sw_r_wa_apa_i_lHpuFbF7J78FA">New Composite Mathematics Class 4 </a>
-</h25> <br>
-                <h26>&nbsp <a href="https://www.amazon.in/dp/9385676636/ref=cm_sw_r_wa_apa_i_8IpuFbT310ECB">Lakhmir Singh's Science 4 (for 2021 Exam) </a>
-</h26> <br>
-                <h27>&nbsp <a href="https://www.amazon.in/dp/9385676628/ref=cm_sw_r_wa_apa_i_YJpuFbNCY029P">Lakhmir Singh's Science 3 (for 2021 Exam)  </a>
-</h27> <br>
            <br>
              
 <h4> &nbsp DONATION <br> &nbsp Google Pay: 09654694411</h4>
