--- a/donate.html
+++ b/donate.html
@@ -43,7 +43,7 @@
              <h7>&nbsp We need some items urgently for the school :-
 
 </h7> <br>
-             <h8>&nbsp <a href="https://www.amazon.in/dp/B07GVR9TG7/ref=cm_sw_r_wa_apa_i_S1puFb465FV8C">1. Wi-Fi booster / router (for zoom classes)</a>   
+             <h8>&nbsp <a href="https://www.amazon.in/dp/B07GVR9TG7/ref=cm_sw_r_wa_apa_i_S1puFb465FV8C">1. Wi-Fi booster / router (for zoom classes)- Double Band</a>   
 </h8> <br>
 <h9>&nbsp 2. Notebooks
 </h9> <br>
