--- a/donate.html
+++ b/donate.html
@@ -44,7 +44,7 @@
 </h8> <br>
 <h9>&nbsp 2. Notebooks and Pens
 </h9> <br>
-        <h24>&nbsp <a href ="https://drive.google.com/file/d/1bJ4rYRjYBWB1We187jItxgn1TBR3raZh/view?usp=sharing">3. IAS Prelims Book_IAS Mains Book_Three More Books for Competition_Click the link for Screenshots_Total 5 Books</a>
+        <h24>&nbsp <a href ="https://i.imgur.com/mNu1yi3.jpg">3. IAS Prelims Book_IAS Mains Book_Three More Books for Competition_Click the link for Screenshots_Total 5 Books</a>
         </h24>
         <br>
         <h10>&nbsp <a href ="https://www.amazon.in/dp/9389609089/ref=cm_sw_r_wa_apa_i_dlC_1kxOFbJ7AYNS0">4. Educart CBSE Maths Class 10 Question Bank (Reduced Syllabus) for 2021  </a>
