--- a/donate.html
+++ b/donate.html
@@ -40,7 +40,7 @@
              <h7>&nbsp We need some items urgently for the school :-
 
 </h7> <br>
-             <h8>&nbsp 1. Study Tables and Chairs</a>   
+             <h8>&nbsp < a href="https://www.amazon.in/dp/B07RJ3BN7L/ref=cm_sw_r_wa_apa_i_a4QaGb0P77FXH">1. Study Tables and Chairs</a>   
 </h8> <br>
 
         <br>
