--- a/donate.html
+++ b/donate.html
@@ -56,7 +56,13 @@
 </h15>  
 <h16>&nbsp Address of delivery:
 </h16> 
-<h17> &nbsp ASHUTOSH KUMAR ,3/72 - FIRST FLOOR ,NEAR DURGA TEMPLE ,RAMESHNAGAR, NEW DELHI ,PIN-110015.
+<h17> &nbsp ASHUTOSH KUMAR, 
+
+8/27, 
+THIRD FLOOR, 
+NEAR DURGA TEMPLE, RAMESHNAGAR, 
+NEW DELHI, PIN-110015.
+Cell: 9654694411
 </h17>
         <br>
             
